--- a/form-flex-responsive.css
+++ b/form-flex-responsive.css
@@ -23,6 +23,7 @@
 */
 
 
+
 #frm_registro{
 	display: flex;
 	flex-direction: row;
@@ -30,10 +31,21 @@
 	border:solid 1px #CFCFCF;
 	border-radius: 10px;
 	margin:50px;
-	margin-top: 100px;
 	padding: 30px;
 	z-index: 0;
+	background-color:white; 
+	
 }
+
+
+#frm_registro h2{
+	border-bottom:solid 1px #CFCFCF; 
+	border-right: solid 1px #CFCFCF;
+	padding: 2px 10px 2px 10px;
+	background-color: #e4e4e4;
+	margin-top: 50px;
+}
+
 
 .cx_text{	
 	outline: none;
@@ -41,7 +53,15 @@
 	border-radius: 3px;
 	height: 30px;
 	width:100%;
+	padding-left: 10px;
 
+}
+
+
+.lb_text {
+	font-weight: bold;
+	font-size: 15px;
+	color:#696969; 
 }
 
 .grupo_cxs{
@@ -49,13 +69,17 @@
 	margin-top: 15px;
 }
 
+.grupo_btns a{ 
+margin-left: -40px;
+}
 
-.col-1, .col-2, .col-3, .col-4, .col-5{
+.col-1, .col-2, .col-3, .col-4, .col-5, .col-6{
   position: relative;
   width: 100%;
   min-height: 1px;
   padding-right: 15px;
   padding-left: 15px;
+
 }
 
 .row{
@@ -75,26 +99,36 @@ width:100%;
 }
 
 .col-3 {
-  -ms-flex: 0 0 29%;
-  flex: 0 0 29%;
-  max-width: 29%;
+  -ms-flex: 0 0 28%;
+  flex: 0 0 28%;
+  max-width: 28%;
+ 
 }
 
 .col-4 {
-  -ms-flex: 0 0 45%;
-  flex: 0 0 45%;
-  max-width: 45%;
+  -ms-flex: 0 0 43.5%;
+  flex: 0 0 43.5%;
+  max-width: 43.5%;
 
 }
+
 
 .col-5 {
-  -ms-flex: 0 0 100%;
-  flex: 0 0 100%;
-  max-width: 100%;
+  -ms-flex: 0 0 60%;
+  flex: 0 0 60%;
+  max-width: 60%;
 
 }
 
-@media(max-width: 950px){
+
+.col-6 {
+  -ms-flex: 0 0 90%;
+  flex: 0 0 90%;
+  max-width: 90%;
+
+}
+
+@media(max-width: 750px){
 
 .grupo_cxs{
 	display: block;
@@ -102,11 +136,10 @@ width:100%;
 
 }
 
-.col-1,.col-2,.col-3,.col-4, .col-5 {
- -ms-flex: 0 0 100%;
-  flex: 0 0 100%;
-  max-width: 100%;
+.col-1,.col-2,.col-3,.col-4, .col-5, .col-6{
+ -ms-flex: 0 0 90%;
+  flex: 0 0 90%;
+  max-width: 90%;
 }
-
 
 }
