--- a/css/form-responsive.css
+++ b/css/form-responsive.css
@@ -128,6 +128,51 @@ width:100%;
 
 }
 
+
+
+#msg_erro{
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    /* right: -500px;  */
+    background-color: #FF6A6A;
+    color:white;
+    border:solid 1px rgb(180, 176, 176);
+    padding:6px 30px;
+    font-size: 15px;
+    box-shadow: 0px 0px 10px 1px #828282;
+    display: none;
+    z-index: 4;
+}
+
+#msg_sucess{
+    position: fixed;
+    bottom: 100px;
+    right: 30px;
+    background-color:#7c9256;
+    color:white;
+    border:solid 1px #7c9256;
+    padding:6px 30px;
+    font-size: 15px;
+    box-shadow: 0px 0px 10px 1px #167450;
+    display: none;
+     z-index: 4;
+}
+
+#msg_duvida{
+    position: fixed;
+    bottom: 65px;
+    right: 30px;
+    background-color:#2b7e73;
+    color:white;
+    border:solid 1px #2b7e73;
+    padding:6px 30px;
+    font-size: 15px;
+    box-shadow: 0px 0px 10px 1px #2b7e73;
+    display: none;
+    z-index: 4;
+}
+
 @media(max-width: 750px){
 
 .grupo_cxs{
