--- a/css/form-responsive.css
+++ b/css/form-responsive.css
@@ -3,28 +3,32 @@
 >> classe . grupo_cxs, define as configurações de bloco de itens do form
 >> classe .cx_text, define as propriedades inputs
 >> classe .col-1.., 5 Tamanho dos inputs
->> @media(max-width: 950px ) configura os itens do display responsivo
 
-	example
-<form id="frm_registro">
-				
-		<h1>Cad. Info Frete</h1>
+**************	Form Padrão **************
+      <form class="frm_registro">				
+          <h1>Cad. Info Frete</h1>			
+            <div class="row">	
+                <div class="grupo_cxs col-1" id="grupo_cx_id">
+                  <label for="">Id</label>
+                  <input class="cx_text" type="text" id="cx_id" disabled>											
+                </div>	
+            </div>
+      </form>
 
-			
-			<div class="row">	
-					<div class="grupo_cxs col-1" id="grupo_cx_id">
-						<label for="">Id</label>
-						<input class="cx_text" type="text" id="cx_id" disabled>											
-					</div>	
-			</div>
-</form>
 
+************** Form Centralizado  **************
+       <form class="frm_center">
+          <div class='bloco_center'><p>Bloco 1</p></div>
+          <div class='bloco_center'><p>Bloco 2</p></div>
+          <div class='bloco_center'><p>Bloco 3</p></div>
+          <div class='bloco_center'><p>Bloco 4</p></div>
+        </form>
 
 */
 
 
 
-#frm_registro{
+.frm_registro{
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
@@ -33,17 +37,44 @@
 	margin:50px;
 	padding: 30px;
 	z-index: 0;
-	background-color:white; 
-	
+	background-color:white; 	
 }
 
 
-#frm_registro h2{
+.frm_registro h2{
 	border-bottom:solid 1px #CFCFCF; 
 	border-right: solid 1px #CFCFCF;
 	padding: 2px 10px 2px 10px;
 	background-color: #e4e4e4;
 	margin-top: 50px;
+}
+
+
+.frm_center{
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	border:solid 1px #CFCFCF;
+	border-radius: 10px;
+	margin:50px;
+	padding: 30px;
+	z-index: 0;
+	background-color:white; 	
+  align-items: center;
+  justify-content: center;
+}
+
+
+.bloco_center {
+  display: flex;
+  height: 100px;
+  width: 100px;
+  margin-left: 50px;
+  margin-top: 50px;
+  border: solid 1px gray;
+  background-color: burlywood;
+  align-items: center;
+  justify-content: center;
 }
 
 
